--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=4f0b1e5891f50db3c57782219280edd4
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:110d220g330j@127.0.0.1:3306/movies?serverVersion=5.7&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
